force-app/main/default/objects/fw1__Payment__c/fw1__Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>