force-app/main/default/objects/fw1__Payment__c/fields/Credit_Memo_QB_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_QB_ID__c</fullName>
    <description>This field use in Quickbook integration</description>
    <label>Credit Memo QB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>