force-app/main/default/objects/fw1__Payment__c/fields/DMS_inv_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_inv_Id__c</fullName>
    <label>DMS inv Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>