force-app/main/default/objects/fw1__Payment__c/fields/DMS_inv_total__c.field-meta.xml
<CustomField>
    <fullName>DMS_inv_total__c</fullName>
    <label>DMS inv total</label>
    <length>20</length>
    <type>Text</type>
</CustomField>