force-app/main/default/objects/fw1__Payment__c/fields/External_Payment_Recipient_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Payment_Recipient_Account_Id__c</fullName>
    <formula>fw1__Payment_Recipient_Account__r.External_Record_Id__c</formula>
    <label>External Payment Recipient Account Id</label>
    <type>Text</type>
</CustomField>