force-app/main/default/objects/fw1__Payment__c/fields/fw1__Additional_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>fw1__Additional_Payment_Method__c</fullName>
    <label>Additional Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>