force-app/main/default/objects/fw1__Payment__c/fields/fw1__API_Payment__c.field-meta.xml
<CustomField>
    <fullName>fw1__API_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Payment</label>
    <type>Checkbox</type>
</CustomField>