force-app/main/default/objects/fw1__Payment__c/fields/fw1__Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>fw1__Application_Fee__c</fullName>
    <label>Application Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>