force-app/main/default/objects/fw1__Payment__c/fields/fw1__Applied_To_Invoices_Count__c.field-meta.xml
<CustomField>
    <fullName>fw1__Applied_To_Invoices_Count__c</fullName>
    <label>Applied To Invoices Count</label>
    <summaryFilterItems>
        <field>fw1__Payment_Activity__c.fw1__Applied_To_Invoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>fw1__Payment_Activity__c.fw1__Payment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>