force-app/main/default/objects/fw1__Payment__c/fields/fw1__Attach_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>fw1__Attach_Terms_And_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach Terms And Conditions</label>
    <type>Checkbox</type>
</CustomField>