force-app/main/default/objects/fw1__Payment__c/fields/fw1__Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>fw1__Authorization_Code__c</fullName>
    <label>Authorization Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>