force-app/main/default/objects/fw1__Payment__c/fields/fw1__Auto_Apply_Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_Apply_Advance_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Apply Advance Payment</label>
    <type>Checkbox</type>
</CustomField>