force-app/main/default/objects/fw1__Payment__c/fields/fw1__Available_On_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Available_On_Date__c</fullName>
    <label>Available On Date</label>
    <type>DateTime</type>
</CustomField>