force-app/main/default/objects/fw1__Payment__c/fields/fw1__AVS_Code__c.field-meta.xml
<CustomField>
    <fullName>fw1__AVS_Code__c</fullName>
    <label>AVS Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>