force-app/main/default/objects/fw1__Payment__c/fields/fw1__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>30</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>