force-app/main/default/objects/fw1__Payment__c/fields/fw1__Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>