force-app/main/default/objects/fw1__Payment__c/fields/fw1__Bank_Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_Last_Four_Digits__c</fullName>
    <description>Hold bank account number and Bank ABA Code if the payment profile is newly created.</description>
    <label>Bank Last Four Digits</label>
    <length>18</length>
    <type>Text</type>
</CustomField>