force-app/main/default/objects/fw1__Payment__c/fields/fw1__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>