force-app/main/default/objects/fw1__Payment__c/fields/fw1__Check_Number__c.field-meta.xml
<CustomField>
    <fullName>fw1__Check_Number__c</fullName>
    <label>Check Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>