force-app/main/default/objects/fw1__Payment__c/fields/fw1__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>