force-app/main/default/objects/fw1__Payment__c/fields/fw1__Connected_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Connected_Account_Id__c</fullName>
    <label>Connected Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>