force-app/main/default/objects/fw1__Payment__c/fields/fw1__Contact__c.field-meta.xml
<CustomField>
    <fullName>fw1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>