force-app/main/default/objects/fw1__Payment__c/fields/fw1__Create_Token__c.field-meta.xml
<CustomField>
    <fullName>fw1__Create_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Token</label>
    <type>Checkbox</type>
</CustomField>