force-app/main/default/objects/fw1__Payment__c/fields/fw1__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Created_Date__c</fullName>
    <inlineHelpText>Payment processor created date</inlineHelpText>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>