force-app/main/default/objects/fw1__Payment__c/fields/fw1__Credit_Card_Surcharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Surcharge_Amount__c</fullName>
    <label>Credit Card Surcharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>