force-app/main/default/objects/fw1__Payment__c/fields/fw1__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>fw1__Credit_Memo__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>