force-app/main/default/objects/fw1__Payment__c/fields/fw1__Custom_Information__c.field-meta.xml
<CustomField>
    <fullName>fw1__Custom_Information__c</fullName>
    <label>Custom Information</label>
    <length>200</length>
    <type>Text</type>
</CustomField>