force-app/main/default/objects/fw1__Payment__c/fields/fw1__Custom_Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>fw1__Custom_Lookup_Object__c</fullName>
    <label>Custom Lookup Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>