force-app/main/default/objects/fw1__Payment__c/fields/fw1__Customer_ID_Number2__c.field-meta.xml
<CustomField>
    <fullName>fw1__Customer_ID_Number2__c</fullName>
    <label>Customer ID Number</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>