force-app/main/default/objects/fw1__Payment__c/fields/fw1__Customer_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Customer_ID_Type__c</fullName>
    <label>Customer ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Social Security Number</fullName>
            </value>
            <value>
                <fullName>Tax ID</fullName>
            </value>
            <value>
                <fullName>Military ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>