force-app/main/default/objects/fw1__Payment__c/fields/fw1__CVV2__c.field-meta.xml
<CustomField>
    <fullName>fw1__CVV2__c</fullName>
    <label>CVV2</label>
    <length>6</length>
    <type>Text</type>
</CustomField>