force-app/main/default/objects/fw1__Payment__c/fields/fw1__CVV2_Match__c.field-meta.xml
<CustomField>
    <fullName>fw1__CVV2_Match__c</fullName>
    <label>CVV2 Match</label>
    <length>10</length>
    <type>Text</type>
</CustomField>