force-app/main/default/objects/fw1__Payment__c/fields/fw1__Deposit_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Deposit_Id__c</fullName>
    <label>Deposit Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>