force-app/main/default/objects/fw1__Payment__c/fields/fw1__Do_Not_Clear_Retry_Info__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Clear_Retry_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Clear Retry Info</label>
    <type>Checkbox</type>
</CustomField>