force-app/main/default/objects/fw1__Payment__c/fields/fw1__Do_Not_Send_Receipt__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Send_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Receipt</label>
    <type>Checkbox</type>
</CustomField>