force-app/main/default/objects/fw1__Payment__c/fields/fw1__Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>