force-app/main/default/objects/fw1__Payment__c/fields/fw1__Downloaded_From_Processor__c.field-meta.xml
<CustomField>
    <fullName>fw1__Downloaded_From_Processor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downloaded From Processor</label>
    <type>Checkbox</type>
</CustomField>