force-app/main/default/objects/fw1__Payment__c/fields/fw1__eCheck_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__eCheck_Type__c</fullName>
    <label>eCheck Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>