force-app/main/default/objects/fw1__Payment__c/fields/fw1__Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>fw1__Electronic_Signature__c</fullName>
    <label>Electronic Signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>