force-app/main/default/objects/fw1__Payment__c/fields/fw1__Email_CC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_CC_Recipients__c</fullName>
    <label>Email CC Recipients</label>
    <type>TextArea</type>
</CustomField>