force-app/main/default/objects/fw1__Payment__c/fields/fw1__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Error_Type__c</fullName>
    <label>Error Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>