force-app/main/default/objects/fw1__Payment__c/fields/fw1__First_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__First_Name__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>