force-app/main/default/objects/fw1__Payment__c/fields/fw1__Invoice_Payment_Applied_At_Account_Level__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Payment_Applied_At_Account_Level__c</fullName>
    <formula>IF( fw1__Applied_To_Invoices_Count__c &gt; 0 &amp;&amp;  fw1__Invoice__c = null,
    true, 
    false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Payment Applied At Account Level</label>
    <type>Checkbox</type>
</CustomField>