force-app/main/default/objects/fw1__Payment__c/fields/fw1__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>fw1__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>