force-app/main/default/objects/fw1__Payment__c/fields/fw1__Is_Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Advance_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Advance Payment</label>
    <type>Checkbox</type>
</CustomField>