force-app/main/default/objects/fw1__Payment__c/fields/fw1__Is_Business_Checking__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Business_Checking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Checking Account</label>
    <type>Checkbox</type>
</CustomField>