force-app/main/default/objects/fw1__Payment__c/fields/fw1__Is_Card_Present__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Card_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Card Present</label>
    <type>Checkbox</type>
</CustomField>