force-app/main/default/objects/fw1__Payment__c/fields/fw1__Is_Pending_Settlement__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Pending_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Settlement</label>
    <type>Checkbox</type>
</CustomField>