force-app/main/default/objects/fw1__Payment__c/fields/fw1__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Net_Amount__c</fullName>
    <label>Net Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>