force-app/main/default/objects/fw1__Payment__c/fields/fw1__Network_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Network_Transaction_Id__c</fullName>
    <label>Network Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>