force-app/main/default/objects/fw1__Payment__c/fields/fw1__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>fw1__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>