force-app/main/default/objects/fw1__Payment__c/fields/fw1__Pass_Surcharge_As_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>fw1__Pass_Surcharge_As_Service_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass Surcharge As Service Fee</label>
    <type>Checkbox</type>
</CustomField>