force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Did_Not_Go_Through__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Did_Not_Go_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Did Not Go Through</label>
    <type>Checkbox</type>
</CustomField>