force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>