force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Profile__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Profile</label>
    <referenceTo>fw1__PaymentProfile__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>