force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Receipt_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Receipt_Email_Subject__c</fullName>
    <label>Payment Receipt Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>