force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Receipt_PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Receipt_PDF_Link__c</fullName>
    <formula>IF(fw1__Domain_Name__c != NULL , &quot;https://&quot;+fw1__Domain_Name__c+&quot;/fw1__PaymentReceiptPDF?pyid=&quot;+Id+ IF(fw1__Invoice__r.Id != null, &quot;&amp;id=&quot;+fw1__Invoice__r.Id, null), 
&quot;/apex/fw1__PaymentReceiptPDF?pyid=&quot;+Id+IF(fw1__Invoice__r.Id != null, &quot;&amp;id=&quot;+fw1__Invoice__r.Id, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Receipt PDF Link</label>
    <type>Text</type>
</CustomField>