force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Recipient_Account__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Recipient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Recipient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Payment Recipient Account)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>