force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments (Payment Recipient Contact)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>