force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_Result__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Result__c</fullName>
    <label>Payment Result</label>
    <type>TextArea</type>
</CustomField>