force-app/main/default/objects/fw1__Payment__c/fields/fw1__Payment_To__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_To__c</fullName>
    <label>Payment To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>