force-app/main/default/objects/fw1__Payment__c/fields/fw1__PaymentSource__c.field-meta.xml
<CustomField>
    <fullName>fw1__PaymentSource__c</fullName>
    <label>PaymentSource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>