force-app/main/default/objects/fw1__Payment__c/fields/fw1__Pending_Review__c.field-meta.xml
<CustomField>
    <fullName>fw1__Pending_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Review</label>
    <type>Checkbox</type>
</CustomField>