force-app/main/default/objects/fw1__Payment__c/fields/fw1__Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>fw1__Processing_Fee__c</fullName>
    <label>Processing Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>