force-app/main/default/objects/fw1__Payment__c/fields/fw1__Reconciliation_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Reconciliation_ID__c</fullName>
    <label>Reconciliation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>