force-app/main/default/objects/fw1__Payment__c/fields/fw1__Reference__c.field-meta.xml
<CustomField>
    <fullName>fw1__Reference__c</fullName>
    <inlineHelpText>Other reference information, i.e. Check Number</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>