force-app/main/default/objects/fw1__Payment__c/fields/fw1__Request_Token__c.field-meta.xml
<CustomField>
    <fullName>fw1__Request_Token__c</fullName>
    <label>Request Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>