force-app/main/default/objects/fw1__Payment__c/fields/fw1__Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>fw1__Shipping_Country__c</fullName>
    <label>Shipping Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>