force-app/main/default/objects/fw1__Payment__c/fields/fw1__Status__c.field-meta.xml
<CustomField>
    <fullName>fw1__Status__c</fullName>
    <label>Status</label>
    <length>27</length>
    <type>Text</type>
</CustomField>