force-app/main/default/objects/fw1__Payment__c/fields/fw1__Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Paid_Amount__c</fullName>
    <description>This field contains the actual/net amount paid (i.e. minus refunds, voids, authorizations, etc.)</description>
    <formula>IF(OR(fw1__Payment_Method__c=&apos;Credit Card&apos;,fw1__Payment_Method__c=&apos;eCheck&apos;),  IF( fw1__Status__c  = &apos;Voided&apos;, 0,  fw1__Total_Captured_Amount__c  -  fw1__Total_Refunded_Amount__c),  fw1__Amount__c  -  fw1__Total_Refunded_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>