force-app/main/default/objects/fw1__Payment__c/fields/fw1__Total_Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Refunded_Amount__c</fullName>
    <label>Total Refunded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>