force-app/main/default/objects/fw1__Payment__c/fields/fw1__Track1__c.field-meta.xml
<CustomField>
    <fullName>fw1__Track1__c</fullName>
    <label>Track1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>