force-app/main/default/objects/fw1__Payment__c/fields/fw1__Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>