force-app/main/default/objects/fw1__Payment__c/fields/fw1__Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Unallocated_Amount__c</fullName>
    <label>Unallocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>