force-app/main/default/objects/fw1__Payment__c/fields/fw1__User_Agent__c.field-meta.xml
<CustomField>
    <fullName>fw1__User_Agent__c</fullName>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>