force-app/main/default/objects/fw1__Payment__c/fields/fw1__Verify_ECheck_Status_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Verify_ECheck_Status_Until_Date__c</fullName>
    <label>Verify ECheck Status Until Date</label>
    <type>Date</type>
</CustomField>