force-app/main/default/objects/fw1__Payment__c/fields/QuickBooks_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Id__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>