force-app/main/default/objects/fw1__Payment__c/fields/WF_fired__c.field-meta.xml
<CustomField>
    <fullName>WF_fired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WF fired</label>
    <type>Checkbox</type>
</CustomField>