force-app/main/default/objects/fw1__Payment__c/validationRules/fw1__CreditCard.validationRule-meta.xml
<ValidationRule>
    <fullName>fw1__CreditCard</fullName>
    <active>true</active>
    <description>Credit Card Invalid</description>
    <errorConditionFormula>AND (
OR (LEN( fw1__Credit_Card_Number__c ) &lt; 10, LEN( fw1__Credit_Card_Number__c ) &gt; 19),
LEN( fw1__Credit_Card_Number__c ) &gt; 0
)</errorConditionFormula>
    <errorDisplayField>fw1__Credit_Card_Number__c</errorDisplayField>
    <errorMessage>Credit Card Invalid</errorMessage>
</ValidationRule>