force-app/main/default/objects/fw1__Payment__c/listViews/credit_card.listView-meta.xml
<ListView>
    <fullName>credit_card</fullName>
    <columns>NAME</columns>
    <columns>fw1__Payment_Date__c</columns>
    <columns>fw1__Payment_Method__c</columns>
    <columns>fw1__Amount__c</columns>
    <columns>fw1__Status__c</columns>
    <columns>fw1__Total_Paid_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fw1__Payment_Method__c</field>
        <operation>equals</operation>
        <value>Credit Card</value>
    </filters>
    <label>credit card</label>
</ListView>